--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "puppeteer": "^24.1.1",
+    "puppeteer-core": "^24.1.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "request-promise": "^4.2.6"
